cluster/apps/matrix/discord-bridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: signal-bridge
    app.kubernetes.io/version: v0.7.5
  name: signal-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: signal-bridge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: signal-bridge
        app.kubernetes.io/version: v0.7.5
    spec:
      containers:
      - image: dock.mau.dev/mautrix/signal:v0.7.5
        name: signal-bridge
        ports:
        - containerPort: 29334
          name: signal-bridge
        volumeMounts:
        - mountPath: /data
          name: data-volume
      volumes:
      - name: config-volume
        configMap:
          name: signal-bridge-configmap
      - name: data-volume
        persistentVolumeClaim:
          claimName: signal-bridge-data-pvc
