cluster/apps/matrix/discord-bridge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: signal-bridge
    app.kubernetes.io/version: v0.7.5
  name: signal-bridge
spec:
  selector:
    app.kubernetes.io/name: signal-bridge
  ports:
  - name: http-signal-bridge
    port: 29334
    targetPort: 29334
